--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </ul>
         </nav>
         <main class="main">
-            <img src="./public/changlogoWH.png" alt="" style="height: 528px; width: 400px;">
+            <img src="/public/changlogoWH.png" alt="" style="height: 528px; width: 400px;">
         </main>
         <div class="down-btn">
-            <a href="#services"><img src="./public/downbtn.svg" alt="" style="width: 100px; height: 100px;"></a></div>
+            <a href="#services"><img src="/public/downbtn.svg" alt="" style="width: 100px; height: 100px;"></a></div>
         </div>
     <div id="container-services">
         <nav class="section-nav">
