file extenstion changes v2

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </ul>
         </nav>
         <main class="main">
-            <img src="/public/changlogoWH.png" alt="" style="height: 528px; width: 400px;">
+            <img src="../public/changlogoWH.png" alt="" style="height: 528px; width: 400px;">
         </main>
         <div class="down-btn">
-            <a href="#services"><img src="/public/downbtn.svg" alt="" style="width: 100px; height: 100px;"></a></div>
+            <a href="#services"><img src="../public/downbtn.svg" alt="" style="width: 100px; height: 100px;"></a></div>
         </div>
     <div id="container-services">
         <nav class="section-nav">
@@ -36,6 +36,6 @@
             <h4>Join us now <br>in the Octogon</h4>
             <p>Only the bravest of warriors can join us in the Octogon!! Don't wait to start your journey, here at Chang's house we offer only the highest quality shit. That includes </p>
         </div>
-        <div class="photo"><img src="./public/side-view-of-muay-thai-fighter-training-isolated-o-2022-12-16-20-26-53-utc.jpg" alt=""></div>
+        <div class="photo"><img src="../public/side-view-of-muay-thai-fighter-training-isolated-o-2022-12-16-20-26-53-utc.jpg" alt=""></div>
 </body>
 </html>
