--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container-main">
         <nav class="main-nav">
             <ul class="nav-list">
-                <li class="nav-item"><a href="#services">Services</a></li>
+                <li class="nav-item"><a href="#services">fuck you</a></li>
                 <li class="nav-item"><a href="#about">About</a></li>
                 <li class="nav-item"><a href="#contact">Contact</a></li>
             </ul>
