--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container-main">
         <nav class="main-nav">
             <ul class="nav-list">
-                <li class="nav-item"><a href="#services">fuck you</a></li>
+                <li class="nav-item"><a href="#services">Services</a></li>
                 <li class="nav-item"><a href="#about">About</a></li>
                 <li class="nav-item"><a href="#contact">Contact</a></li>
             </ul>
@@ -36,6 +36,6 @@
             <h4>Join us now <br>in the Octogon</h4>
             <p>Only the bravest of warriors can join us in the Octogon!! Don't wait to start your journey, here at Chang's house we offer only the highest quality shit. That includes </p>
         </div>
-        <div class="photo"><img src="./public/side-view-of-muay-thai-fighter-training-isolated-o-2022-12-16-20-26-53-utc.jpg" alt=""></div>
+        <div class="photo"><img src="/public/servicesimg.jpg" alt=""></div>
 </body>
 </html>
