--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
                 <li class="nav-item"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <section id="services"></section>
+        <section id="services">
+        </section>
         <div class="text">
-            <h4>Join us now <br>in the Octogon</h4>
-            <p>Only the bravest of warriors can join us in the Octogon!! Don't wait to start your journey, here at Chang's house we offer only the highest quality shit. That includes </p>
+            <h4>Join us now in <br>the Octogon</h4>
+            <p>Only the bravest of warriors can join us in the Octogon!! Don't wait to start your journey, here at Chang's house we offer only the highest quality shit. That includes the good shit, the real good shit and the goodest shit. </p>
         </div>
-        <div class="photo"><img src="/public/servicesimg.jpg" alt=""></div>
+        <div class="photo">
+            <img src="./public/servicesimg.jpg" alt="">
+        </div>
 </body>
 </html>
